[package]
name = "arena_bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "=1.0.195", features = ["derive"] }
serde_json = "=1.0.111"
uuid = { version = "=1.6.1", features = ["v4", "serde"] }
blake3 = "=1.5.0"
tungstenite = { version = "=0.20.1" }
rand = "=0.8.5"
url = "=2.4.1"
idna = "=0.5.0"